--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -1,19 +1,25 @@
 ---
 const {id} = Astro.params
-const {title, date} = Astro.props
+const {title, date, comments} = Astro.props
 const today = new Date()
 const postDate = new Date(date)
 const elapsed = Math.round((today - postDate) /(1000 * 60 * 60 * 24))
+console.log(comments)
 --- 
-<div class="rounded-lg border-t-2 mx-auto px-20 my-10 container text-white py-10 " style="max-width: 1200px;" >
-    <div class="text-xl px-20 pb-4 text-black">Comments for {title}</div>
-    <div class="flex flex-col  [&>*:nth-child(odd)]:bg-neutral-100" id={`comments-${id}`}> 
-        <div class="rounded-lg mx-20 p-3 text-black bg-slate-200 ">
-          <div class="text-lg font-medium">User writes...</div>
-          <div class="mt-1">Meddelande</div>
-        </div>
+<div class="rounded-lg border-t-2 mx-auto md:px-40 px-6 container text-white py-6 w-6xl">
+    <div class="text-xl pb-4 text-black">Comments for {title}</div>
+    <div class="flex flex-col  [&>*:nth-child(odd)]:bg-neutral-100 gap-4" id={`comments-${id}`}> 
+        {
+            comments.map((comment)=>(
+                <div class="rounded-lg p-3 text-black bg-slate-200 ">
+                    <div class="text-lg font-medium">{comment.author_name} writes...</div>
+                    <div set:html={comment.content.rendered} class="mt-1"></div>
+                </div>
+    
+            ))
+        }
     </div>
-    <div class="writeComment flex flex-col gap-4 px-20 mt-4">
+    <div class="writeComment flex flex-col gap-4 mt-4">
         <input class="rounded-lg p-2 text-black" placeholder="Name" name={`name`}/>
         <textarea class="rounded-lg p-2  text-black" placeholder="Conntent" name={`body`}></textarea>
         <a style="width: fit-content;" class="bg-blue-500 p-2 rounded-md hover:bg-blue-700 hover:cursor-pointer" hx-post="/api/comments" hx-target={`#comments-${id}`} hx-swap="beforeend settle:1s" hx-include=`[name='name'],[name='body']`>Comment</a>
