--- a/src/pages/category/[id].astro
+++ b/src/pages/category/[id].astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import type { GetStaticPaths } from "astro";
 import Layout from "../../layout/Layout.astro";
 const {id} = Astro.params
@@ -19,4 +19,4 @@ console.log(category)
   {category.map((c)=>(
     <div><a href={`/posts/${c.slug}`}>{c.title.rendered}</a></div>
   ))}
-</Layout>
+</Layout> -->
