--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -7,9 +7,9 @@ import { fade } from "astro:transitions";
 <nav   class="bg-slate-800 text-white px-3 py-3">
     <div class="container mx-auto flex justify-end" style="max-width: 1200px">
         <ul class="list-none flex flex-row gap-4">
-            <li><a class="flex flex-row items-center gap-2  p-2 rounded-lg" href="/"><i class="gg-home-alt"></i> <span>Startsidan</span></a></li>
-            <li><a class="flex flex-row items-center gap-2  p-2 rounded-lg" href="/blogg"><i class="gg-home-alt"></i>Blogg</a></li>
-             <li><a class="flex flex-row items-center gap-2  p-2 rounded-lg" href="/posts"><i class="gg-home-alt"></i>Posts</a></li>
+            <li><a class="flex flex-row items-center gap-2  p-2 rounded-lg" href="/"><i class="gg-home-alt"></i> <span>Start</span></a></li>
+            <li><a class="flex flex-row items-center gap-2  p-2 rounded-lg" href="/blogg"><i class="gg-home-alt"></i>Blog</a></li>
+             <li><a class="flex flex-row items-center gap-2  p-2 rounded-lg" href="/posts/1"><i class="gg-home-alt"></i>Archive</a></li>
         </ul>
     </div>
 </nav>
