category page, list by category

--- a/src/pages/blogg.astro
+++ b/src/pages/blogg.astro
@@ -15,7 +15,7 @@ const today = new Date()
     <div  class="container mx-auto flex flex-row max-w-6xl">
         <div  class="container max-w-6xl">
             <div transition:name="title" class=" rounded-lg container p-4 text-4xl text-black w-fit">
-                {pathname} 
+                Blogg
                 <span class="text-xl"></span>
             </div>
         </div>
