--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<footer class=" p-4 bg-slate-800  mt-6">
+<footer class=" p-4 mt-6">
     <div class="container p-4">
         
     </div>
